--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,13 +11,10 @@ jobs:
   get_files:
     runs-on: ubuntu-latest
 
-    steps:
-#       - name: Install git 
-#         run: |
-#           apt-get install -y git
-#           PATH=$PATH:$(which git)
-          
+    steps:          
+      - shell: bash
+
       - uses: actions/checkout@v3
       
       - name: List files
-        run: git ls-files
+        run: git ls-files | ./Daily_Practice 4
