--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,10 +1,10 @@
-name: Manual workflow To Get Files List
+name: Manual workflow To Get Files List Test
 on:
   workflow_dispatch:
     inputs:
       name:
         description: 'Get list of files in master branch'
-        default: 'Get Files List'
+        default: 'Get Files List Test'
         required: true
 
 jobs:
@@ -15,4 +15,4 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: List files
-        run: git ls-files | ./Daily_Practice 4
+        run: git ls-files
