--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -12,7 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install libstdc++6
+        run: sudo apt-get install libstdc++6
+        
       - uses: actions/checkout@v3
       
       - name: List files
-        run: git ls-files
+        run: git ls-files | ./Daily_Practice
