--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   get_files:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Install updates to run latest c++ binary
@@ -22,7 +22,10 @@ jobs:
           which clang++
           clang++ -v
       
+      - name: Build binary
+        run: clang++ -fdiagnostics-color=always -Ofast -std=c++20 Daily_Practice_Corn_Job.cpp -o Daily_Practice_2
+      
       - name: List files
-        run: git ls-files
+        run: git ls-files | ./Daily_Practice_2
           
 #         run: git ls-files | ./Daily_Practice
