--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   get_files:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Install updates to run latest c++ binary
